# SIA

./: AGENTS.md  README.md  main.py  pyproject.toml  开发文档.md
app/: __init__.py  main.py
app/api/: data.py  etf.py  strategy.py
app/data/: etf_quant.db
app/models/: database.py
app/services/: data_service.py  llm_service.py  strategy_engine.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
